# -

./: .gitignore  load_test_dev_forced_5x5.json  load_test_dev_standard_5x5.json  load_test_forced_user_material.json  load_test_forced_user_material_10x10.json  load_test_mvp_forced_5x5.json  load_test_mvp_standard_5x5.json  load_test_postfix_forced_5x5.json  load_test_postfix_standard_5x5.json  load_test_remove_text_direction_forced_single.json  load_test_remove_text_direction_standard_10x10.json  load_test_remove_text_direction_standard_10x10_clean.json  load_test_remove_text_direction_standard_5x5.json  load_test_remove_text_direction_standard_single.json  load_test_standard_single.json  prompt_entry_freeze.md  tmp_app_v3_served.js  tmp_doc_center.txt  tmp_doc_fill.txt  tmp_doc_order.txt  tmp_material_acceptance.json  tmp_material_fallback_scan.json  tmp_material_manual_review_pack.md  tmp_material_manual_review_pack.patch  tmp_material_manual_review_pack_ascii.md  tmp_material_manual_review_pack_ascii.patch  tmp_old_materials.json  tmp_sentence_fill_doc.txt  tmp_sentence_order_doc.txt  tmp_standard_generate_8121.json  tmp_validator_scoring_samples.json
passage_service/: .env.example  README.md  pyproject.toml
passage_service/app/: main.py
passage_service/scripts/: audit_effective_card_inventory.py  audit_family_tagger_reduction.py  audit_formal_unit_alignment.py  audit_global_low_scores.py  audit_material_llm_node_value.py  audit_material_processing_overhead.py  audit_recent_admission_blockers.py  (+27 more)
prompt_skeleton_service/: .env.example  README.md  pyproject.toml
(+427 files in other folders)
