[project]
name = "passage-service"
version = "0.1.0"
description = "Passage service MVP for ingesting, segmenting, tagging and pooling material spans."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn>=0.35.0",
  "sqlalchemy>=2.0.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.10.0",
  "pyyaml>=6.0.0",
  "httpx>=0.28.0",
  "beautifulsoup4>=4.12.0",
  "apscheduler>=3.10.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
